client/Login, Register: fix overflowing css issue.

--- a/client/src/pages/styles/Login.css
+++ b/client/src/pages/styles/Login.css
@@ -7,15 +7,15 @@
 }
 
 body {
-  min-height: 100vh;
   font-family: 'Raleway', sans-serif;
+  overflow: hidden;
 }
 
 .container {
   position: absolute;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: none;
   
   &:hover,
   &:active{
